<resources>
    <string name="app_name">HashTag</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_signup">No account? Go to Signup</string>
    <string name="hint_username">Username</string>
    <string name="button_signup">Signup</string>
    <string name="text_login">Already have an account? Go to Login</string>
    <string name="hint_search">Search</string>
    <string name="button_apply">Apply</string>
    <string name="button_signout">Signout</string>
    <string name="hint_tweet_text">what\'s up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Home</string>
    <string name="title_myactivity">My Activity</string>
    <string name="toast_uploading">Uploading..</string>
    <string name="intent_type">image/*</string>
    <string name="modal_yes">yes</string>
    <string name="modal_cancel">cancel</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <!-- Form Validator Errors -->
    <string name="form_error_email_empty">Email cannot be empty</string>
    <string name="form_error_email_incorrect">Incorrect email pattern</string>
    <string name="form_error_password_empty">Password cannot be empty</string>
    <string name="form_error_username_empty">Username cannot be empty</string>
    <string name="form_error_password_min">Password cannot be less than 6 characters</string>
    <string name="form_error_username_min">Username cannot be less than 3 characters</string>
</resources>
