<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="formValidator"
            type="com.devwujot.hashtag.framework.utility.FormValidator" />
        <variable
            name="viewModel"
            type="com.devwujot.hashtag.framework.viewModel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activities.SignupActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    style="@style/MainLogo" />

                <!-- Username -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_TIL"
                    style="@style/FormFieldTIL"
                    app:textChangedListener="@{formValidator}"
                    android:layout_below="@+id/imageView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:inputType="text"
                        android:text="@={viewModel.username}" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_TIL"
                    style="@style/FormFieldTIL"
                    app:textChangedListener="@{formValidator}"
                    android:layout_below="@+id/username_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_TIL"
                    style="@style/FormFieldTIL"
                    app:textChangedListener="@{formValidator}"
                    android:layout_below="@+id/email_TIL">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonSignup"
                    style="@style/StandardButton"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/password_TIL"
                    android:onClick="@{() -> viewModel.onSignupClicked()}"
                    android:text="@string/button_signup" />

                <TextView
                    android:id="@+id/loginTV"
                    style="@style/LinkText"
                    android:layout_below="@id/buttonSignup"
                    android:onClick="@{() -> viewModel.onLoginClicked()}"
                    android:text="@string/text_login" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/signupProgressLayout"
            style="@style/ProgressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>