<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.devwujot.hashtag.core.data.User" />

        <variable
            name="viewModel"
            type="com.devwujot.hashtag.framework.viewModel.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activities.ProfileActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/grid_3x"
                android:layout_marginBottom="@dimen/grid_3x"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_width"
                    android:layout_marginBottom="@dimen/grid_2x"
                    android:onClick="@{() -> viewModel.onImageClicked()}"
                    android:src="@drawable/default_user"
                    app:loadImage="@{user.imageUrl}" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameTIL"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/photo"
                    android:paddingBottom="@dimen/grid_2x">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        app:updateField="@{user.username}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/usernameTIL"
                    android:paddingBottom="@dimen/grid_2x">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        app:updateField="@{user.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/applyButton"
                    style="@style/StandardButton"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_height"
                    android:layout_below="@id/emailTIL"
                    android:layout_marginBottom="@dimen/grid_2x"
                    android:onClick="@{() -> viewModel.onApplyButtonClicked()}"
                    android:text="@string/button_apply" />

                <Button
                    android:id="@+id/signoutButton"
                    style="@style/StandardButton"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_height"
                    android:layout_below="@+id/applyButton"
                    android:layout_marginBottom="@dimen/grid_2x"
                    android:onClick="@{() -> viewModel.onSignoutButtonClicked()}"
                    android:text="@string/button_signout" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/profileProgressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ProgressLayout">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
